# evmfactory

./: .env.example  .gitignore  .prettierrc  .slither.config.json  .slitherignore  .solcover.js  CHANGELOG.md  LICENSE  Makefile  README.md  arguments.js  env-example.js  foundry.toml  hardhat-connection.ts  hardhat.config.ts  mainnet.json  package.json  remappings.txt  sepolia.json  slither.config.json  tsconfig.json
.github/: check-coverage.sh
.husky/: pre-commit
api/: contracts.md  scripts.md
contracts/: README.md  readme-validators.md
demo/: .deployment.json  .env.example  README.md
docs/: SECURITY.md  architecture.md  chainlink-price-oracle.md  contest-v2.md  contest.md  core-definitions.md  coverage.md  deployment.md  event-router.md  event-system.md  examples.md  factory-refactor.md  gas-optimization.md  migrations.md  plan-manager-module.md  price-oracle.md  subscription-billing-guide.md  subscription-multi-tier-architecture.md  subscription-multi-tier-plan.md  testing.md
errors/: Errors.sol
evm/: .env.example  .slitherignore  README.md  package.json  tsconfig.json
examples/: event-router-listener.ts
move/: README.md
scripts/: billing-config.example.json  charge.ts  check-coverage.sh  deploy.ts  estimate-subscription-gas.ts  grantAutomationRole.ts  grantRelayerRole.ts  helper.ts  run-billing-worker.ts  run-gas-tests.sh  (+5 more)
solana/programs/evmfactory/: Cargo.toml
solana/programs/evmfactory/src/: errors.rs  lib.rs  state.rs  utils.rs
solana/programs/evmfactory/src/instructions/: admin.rs  contest.rs  listing.rs  mod.rs  order.rs  subscription.rs
(+373 files in other folders)
