[package]
name = "evmfactory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "evmfactory"

[features]
no-entrypoint = []
client = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
anchor-lang = { workspace = true, features = ["derive"] }
